# Quant-Walkforward

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
scripts/: backtest_run.py  make_synthetic_xs_data.py  param_sweep.py  pull_data.py  rolling_splits.py  rolling_splits_global.py  run_xs_ablation.py  run_xs_model.py  run_xs_strategy_ablation.py
scripts/data/: SPY.csv  SPY.csv.xlsx
scripts/data/demo_xs/: DEMO01.csv  DEMO02.csv  DEMO03.csv  DEMO04.csv  DEMO05.csv  DEMO06.csv  DEMO07.csv  DEMO08.csv
scripts/data/real_etf_xs/: QQQ.csv  SPY.csv  XLB.csv  XLC.csv  XLE.csv  XLF.csv  XLI.csv  XLK.csv  XLP.csv  XLRE.csv  XLU.csv  XLV.csv  XLY.csv
scripts/splits_train_test/: walkforward_plan_9_1.csv
src/quant_walkforward.egg-info/: PKG-INFO  SOURCES.txt
src/qwf/: backtest.py  data.py  experiments.py  features.py  labels.py  metrics.py  models.py  portfolio.py  run_management.py  signals.py  splits.py
src/qwf/reporting/: plots.py
tests/: conftest.py  test_features.py  test_labels.py  test_leakage_and_lookahead.py  test_metrics.py  test_models.py  test_portfolio.py  test_pull_data.py  test_run_management.py  test_signals.py  test_splits.py  test_xs_ablation.py  test_xs_metrics.py  test_xs_pipeline.py  test_xs_strategy_ablation.py
