[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-walkforward"
version = "0.1.0"
description = "Small walk-forward quant research framework"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "yfinance",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]